# azdo-az-backup

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
azdo_backup/: backup.py  cli.py  client.py  restore.py  util.py  verify.py
tests/: azdo_stub.py  test_backup.py  test_cli.py  test_client.py  test_e2e.py  test_e2e_archive.py  test_pagination.py  test_relations.py  test_request.py  test_restore.py  test_restore_stats.py  test_resume.py  test_throttle.py  test_util.py
